--- a/contacts.html
+++ b/contacts.html
@@ -37,7 +37,7 @@
     </div>
     <div class="content">
       <div class="links">
-        <div class="links__item active"><a target="_blank" href="https://www.facebook.com/profile.php?id=100010500373472" class="face"></a></div>
+        <div class="links__item active"><a target="_blank" href="www.instagram.com/onetaras" class="face"></a></div>
         <div class="links__item disabled"><a href="#" class="inst"></a></div>
         <div class="links__item disabled"><a href="#" class="twit"></a></div>
         <div class="links__item disabled"><a href="#" class="goog"></a></div>
